# ast-cli

./: .pre-commit-config.yaml  Cargo.toml
docs/: code-quality-findings.md  design.md  test-report.md
src/: main.rs
src/languages/: mod.rs
src/ops/: find.rs  mod.rs  outline.rs  project.rs  query.rs  read.rs  skeleton.rs  walk.rs
