[package]
name = "ast-cli"
version = "0.1.0"
edition = "2024"
description = "Multi-language structural code navigation for AI agents"
license = "MIT"

[[bin]]
name = "ast-cli"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Parsing
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-proto = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
